resolve code smells