@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.em.stitching.testutil;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
@@ -13,7 +14,6 @@ import org.apache.pdfbox.pdmodel.PDDocument;
 import org.apache.pdfbox.pdmodel.interactive.documentnavigation.destination.PDPageDestination;
 import org.apache.pdfbox.pdmodel.interactive.documentnavigation.outline.PDDocumentOutline;
 import org.apache.pdfbox.pdmodel.interactive.documentnavigation.outline.PDOutlineItem;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.ComponentScan;
@@ -45,18 +45,23 @@ import uk.gov.hmcts.reform.em.test.s2s.S2sHelper;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static pl.touk.throwing.ThrowingFunction.unchecked;
+
+// CHECKSTYLE:OFF: AvoidStarImport - Test Constants class specific for this TestUtil class.
+import static uk.gov.hmcts.reform.em.stitching.testutil.TestDataConstants.*;
+// CHECKSTYLE:ON: AvoidStarImport
+
 
 @Service
 @ComponentScan({ "uk.gov.hmcts.reform" })
@@ -71,58 +76,59 @@ public class TestUtil {
     @Value("${document_management.url}")
     private String dmApiUrl;
 
-    @Autowired
-    private IdamHelper idamHelper;
+    private final IdamHelper idamHelper;
 
-    @Autowired
-    private S2sHelper s2sHelper;
+    private final S2sHelper s2sHelper;
 
-    @Autowired
-    @Qualifier("xuiS2sHelper")
-    private S2sHelper cdamS2sHelper;
+    private final S2sHelper cdamS2sHelper;
 
-    @Autowired
-    private DmHelper dmHelper;
+    private final DmHelper dmHelper;
 
-    @Autowired
-    private CcdDataHelper ccdDataHelper;
+    private final CcdDataHelper ccdDataHelper;
 
-    @Autowired
-    private CdamHelper cdamHelper;
+    private final CdamHelper cdamHelper;
 
-    public final String createCaseTemplate = "{\n"
-        + "    \"caseTitle\": null,\n"
-        + "    \"caseOwner\": null,\n"
-        + "    \"caseCreationDate\": null,\n"
-        + "    \"caseDescription\": null,\n"
-        + "    \"caseComments\": null,\n"
-        + "    \"caseDocuments\": %s\n"
-        + "  }";
+    public TestUtil(IdamHelper idamHelper, S2sHelper s2sHelper, @Qualifier("xuiS2sHelper") S2sHelper cdamS2sHelper,
+                    DmHelper dmHelper, CcdDataHelper ccdDataHelper, CdamHelper cdamHelper) {
+        this.idamHelper = idamHelper;
+        this.s2sHelper = s2sHelper;
+        this.cdamS2sHelper = cdamS2sHelper;
+        this.dmHelper = dmHelper;
+        this.ccdDataHelper = ccdDataHelper;
+        this.cdamHelper = cdamHelper;
+    }
+
+    public static final String CREATE_CASE_TEMPLATE = """
+        {
+            "caseTitle": null,
+            "caseOwner": null,
+            "caseCreationDate": null,
+            "caseDescription": null,
+            "caseComments": null,
+            "caseDocuments": %s
+          }""";
 
     private final ObjectMapper objectMapper = new ObjectMapper().registerModule(new JavaTimeModule());
 
-    private String stitchingTestUser = "stitchingTestUser@stitchingTest.com";
-    private List<String> stitchingTestUserRoles = Stream.of(
-            "caseworker",
-            "caseworker-publiclaw",
-            "ccd-import")
-            .collect(Collectors.toList()
-            );
+    private final List<String> stitchingTestUserRoles = Stream.of(
+            CASEWORKER_ROLE,
+            CASEWORKER_PUBLICLAW_ROLE,
+            CCD_IMPORT_ROLE)
+        .toList();
 
     @PostConstruct
     public void init() {
-        idamHelper.createUser("stitchingTestUser@stitchingTest.com",
-            Stream.of("caseworker", "caseworker-publiclaw", "ccd-import").collect(Collectors.toList()));
+        idamHelper.createUser(STITCHING_TEST_USER_EMAIL, stitchingTestUserRoles);
         SerenityRest.useRelaxedHTTPSValidation();
-        idamAuth = idamHelper.authenticateUser("stitchingTestUser@stitchingTest.com");
+        idamAuth = idamHelper.authenticateUser(STITCHING_TEST_USER_EMAIL);
         s2sAuth = s2sHelper.getS2sToken();
     }
 
     public RequestSpecification authRequest() {
         return s2sAuthRequest()
-                .baseUri(testUrl)
-                .contentType(APPLICATION_JSON_VALUE)
-                .header("Authorization", idamAuth);
+            .baseUri(testUrl)
+            .contentType(APPLICATION_JSON_VALUE)
+            .header(AUTH_HEADER, idamAuth);
     }
 
     public RequestSpecification unauthenticatedRequest() {
@@ -131,42 +137,43 @@ public class TestUtil {
 
     private RequestSpecification s2sAuthRequest() {
         return SerenityRest
-                .given()
-                .baseUri(testUrl)
-                .contentType(APPLICATION_JSON_VALUE)
-                .header("ServiceAuthorization", s2sAuth);
+            .given()
+            .baseUri(testUrl)
+            .contentType(APPLICATION_JSON_VALUE)
+            .header(SERVICE_AUTH_HEADER, s2sAuth);
     }
 
     public File downloadDocument(String documentUrl) throws IOException {
         String documentId = documentUrl.substring(documentUrl.lastIndexOf('/') + 1);
-        Path tempPath = Paths.get(System.getProperty("java.io.tmpdir") + "/" + documentId + "-test.pdf");
+        Path tempPath = Files.createTempFile(documentId + "-", "-test.pdf");
         Files.copy(dmHelper.getDocumentBinary(documentId), tempPath, StandardCopyOption.REPLACE_EXISTING);
+        tempPath.toFile().deleteOnExit();
         return tempPath.toFile();
     }
 
     public String uploadDocument(String pdfName) {
         try {
             return dmHelper.getDocumentMetadata(
-                    dmHelper.uploadAndGetId(
-                            ClassLoader.getSystemResourceAsStream(pdfName), "application/pdf", pdfName))
-                    .links.self.href;
+                dmHelper.uploadAndGetId(
+                    ClassLoader.getSystemResourceAsStream(pdfName), APPLICATION_PDF, pdfName))
+                .links.self.href;
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new UncheckedIOException(e);
         }
     }
 
 
     private String uploadDocument() {
-        return uploadDocument("hundred-page.pdf");
+        return uploadDocument(HUNDRED_PAGE_PDF);
     }
 
     public BundleDTO getTestBundle() {
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle Title");
-        bundle.setDescription("This is the description of the bundle: it is great.");
+        bundle.setBundleTitle(BUNDLE_TITLE);
+        bundle.setDescription(BUNDLE_DESCRIPTION);
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(uploadDocument(), "Document 1"));
-        docs.add(getTestBundleDocument(uploadDocument(), "Document 2"));
+        docs.add(getTestBundleDocument(uploadDocument(), DOCUMENT_1_TITLE));
+        docs.add(getTestBundleDocument(uploadDocument(), DOCUMENT_2_TITLE));
         bundle.setDocuments(docs);
 
         return bundle;
@@ -174,21 +181,20 @@ public class TestUtil {
 
     public BundleDTO getTestBundleforFailure() throws IOException {
         ObjectMapper mapper = new ObjectMapper()
-                .configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+            .configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
 
         final File bundleJsonFile = new File(ClassLoader.getSystemResource("bundle.json").getPath());
-        BundleDTO bundle = mapper.readValue(bundleJsonFile, BundleDTO.class);
 
-        return bundle;
+        return mapper.readValue(bundleJsonFile, BundleDTO.class);
     }
 
     public BundleDTO getTestBundleWithOnePageDocuments() {
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle Title");
-        bundle.setDescription("This is the description of the bundle: it is great.");
+        bundle.setBundleTitle(BUNDLE_TITLE);
+        bundle.setDescription(BUNDLE_DESCRIPTION);
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(uploadDocument("Document1.pdf"), "Document 1"));
-        docs.add(getTestBundleDocument(uploadDocument("Document2.pdf"), "Document 2"));
+        docs.add(getTestBundleDocument(uploadDocument(DOCUMENT_1_PDF), DOCUMENT_1_TITLE));
+        docs.add(getTestBundleDocument(uploadDocument(DOCUMENT_2_PDF), DOCUMENT_2_TITLE));
         bundle.setDocuments(docs);
 
         return bundle;
@@ -196,8 +202,8 @@ public class TestUtil {
 
     public BundleDTO getTestBundleWithLargeToc() {
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle Title");
-        bundle.setDescription("This is the description of the bundle: it is great.");
+        bundle.setBundleTitle(BUNDLE_TITLE);
+        bundle.setDescription(BUNDLE_DESCRIPTION);
         List<BundleDocumentDTO> docs = new ArrayList<>();
         docs.add(getTestBundleDocument(uploadDocument("five-hundred-page.pdf"), "Document 3"));
         docs.add(getTestBundleDocument(uploadDocument("annotationTemplate.pdf"), "Document 4"));
@@ -209,11 +215,13 @@ public class TestUtil {
 
     public BundleDTO getTestBundleOutlineWithNoDestination() {
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle Title");
-        bundle.setDescription("This is the description of the bundle: it is great.");
+        bundle.setBundleTitle(BUNDLE_TITLE);
+        bundle.setDescription(BUNDLE_DESCRIPTION);
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(uploadDocument("Document-With-Outlines-No-Page-Links.pdf"), "Document 1"));
-        docs.add(getTestBundleDocument(uploadDocument("Document-With-Outlines-No-Page-Links.pdf"), "Document 2"));
+        docs.add(getTestBundleDocument(
+            uploadDocument("Document-With-Outlines-No-Page-Links.pdf"), DOCUMENT_1_TITLE));
+        docs.add(getTestBundleDocument(
+            uploadDocument("Document-With-Outlines-No-Page-Links.pdf"), DOCUMENT_2_TITLE));
         bundle.setDocuments(docs);
 
         return bundle;
@@ -221,11 +229,11 @@ public class TestUtil {
 
     public BundleDTO getTestBundleWithOneDocumentWithAOutline() {
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle Title");
-        bundle.setDescription("This is the description of the bundle: it is great.");
+        bundle.setBundleTitle(BUNDLE_TITLE);
+        bundle.setDescription(BUNDLE_DESCRIPTION);
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(uploadDocument("one-page.pdf"), "Document 1"));
-        docs.add(getTestBundleDocument(uploadDocument("Document1.pdf"), "Document 2"));
+        docs.add(getTestBundleDocument(uploadDocument(ONE_PAGE_PDF), DOCUMENT_1_TITLE));
+        docs.add(getTestBundleDocument(uploadDocument(DOCUMENT_1_PDF), DOCUMENT_2_TITLE));
         bundle.setDocuments(docs);
 
         return bundle;
@@ -246,20 +254,11 @@ public class TestUtil {
         bundle.setBundleTitle("Bundle of Word Documents");
         bundle.setDescription("This bundle contains Word documents that have been converted by Docmosis.");
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(uploadDocument(), "Test PDF"));
-        docs.add(getTestBundleDocument(uploadFile("wordDocument.doc", "application/msword"), "Test Word Document"));
-        docs.add(getTestBundleDocument(uploadFile(
-                "wordDocument2.docx",
-                "application/vnd.openxmlformats-officedocument.wordprocessingml.document"),
-                "Test DocX"));
-        docs.add(getTestBundleDocument(uploadFile(
-                "largeDocument.docx",
-                "application/vnd.openxmlformats-officedocument.wordprocessingml.document"),
-                "Test Word Document"));
-        docs.add(getTestBundleDocument(uploadFile(
-                "wordDocumentInternallyZip.docx",
-                "application/vnd.openxmlformats-officedocument.wordprocessingml.document"),
-                "Test Word DocX/Zip"));
+        docs.add(getTestBundleDocument(uploadDocument(), TEST_PDF_TITLE));
+        docs.add(getTestBundleDocument(uploadFile(WORD_DOCUMENT_DOC, APPLICATION_MS_WORD), TEST_WORD_DOCUMENT_TITLE));
+        docs.add(getTestBundleDocument(uploadFile(WORD_DOCUMENT_2_DOCX, DOCX_MIME_TYPE), "Test DocX"));
+        docs.add(getTestBundleDocument(uploadFile(LARGE_DOCUMENT_DOCX, DOCX_MIME_TYPE), TEST_WORD_DOCUMENT_TITLE));
+        docs.add(getTestBundleDocument(uploadFile(WORD_DOCUMENT_ZIP_DOCX, DOCX_MIME_TYPE), "Test Word DocX/Zip"));
         bundle.setDocuments(docs);
 
         return bundle;
@@ -270,8 +269,9 @@ public class TestUtil {
         bundle.setBundleTitle("Bundle of Text File");
         bundle.setDescription("This bundle contains Text File that has been converted by Docmosis.");
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(uploadDocument(), "Test PDF"));
-        docs.add(getTestBundleDocument(uploadFile("sample_text_file.txt", "text/plain"), "Test Text File"));
+        docs.add(getTestBundleDocument(uploadDocument(), TEST_PDF_TITLE));
+        docs.add(getTestBundleDocument(
+            uploadFile("sample_text_file.txt", TEXT_PLAIN_MIME_TYPE), "Test Text File"));
         bundle.setDocuments(docs);
 
         return bundle;
@@ -282,8 +282,8 @@ public class TestUtil {
         bundle.setBundleTitle("Bundle of Rich Text File");
         bundle.setDescription("This bundle contains Rich Text File that has been converted by Docmosis.");
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(uploadDocument(), "Test PDF"));
-        docs.add(getTestBundleDocument(uploadFile("rtf.rtf", "application/rtf"), "Rich Text File"));
+        docs.add(getTestBundleDocument(uploadDocument(), TEST_PDF_TITLE));
+        docs.add(getTestBundleDocument(uploadFile("rtf.rtf", RTF_MIME_TYPE), "Rich Text File"));
         bundle.setDocuments(docs);
 
         return bundle;
@@ -294,32 +294,16 @@ public class TestUtil {
         bundle.setBundleTitle("Bundle of Excel and PPT Documents");
         bundle.setDescription("This bundle contains PPT and Excel documents that have been converted by Docmosis.");
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(uploadDocument(), "Test PDF"));
-        docs.add(getTestBundleDocument(uploadFile("wordDocument.doc", "application/msword"), "Test Word Document"));
-        docs.add(getTestBundleDocument(uploadFile(
-                "largeDocument.docx",
-                "application/vnd.openxmlformats-officedocument.wordprocessingml.document"),
-                "Test Word Document"));
-        docs.add(getTestBundleDocument(uploadFile(
-                "Performance_Out.pptx",
-                "application/vnd.openxmlformats-officedocument.presentationml.presentation"),
-                "Test PPTX"));
-        docs.add(getTestBundleDocument(uploadFile(
-                "TestExcelConversion.xlsx",
-                "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"),
-                "Test XLSX"));
-        docs.add(getTestBundleDocument(uploadFile("XLSsample.xls", "application/vnd.ms-excel"), "Test XLS"));
-        docs.add(getTestBundleDocument(uploadFile(
-                "Portable_XR_ReportTemplate.xltx",
-                "application/vnd.openxmlformats-officedocument.spreadsheetml.template"),
-                "Test XLTX"));
-        docs.add(getTestBundleDocument(uploadFile("file_example_PPT_250kB.ppt",
-                "application/vnd.ms-powerpoint"), "Test PPT"));
-        //docs.add(getTestBundleDocument(uploadFile("potential_and_kinetic.ppt",
-        //"application/vnd.ms-powerpoint"), "Test PPT"));
-        docs.add(getTestBundleDocument(uploadFile("sample.ppsx",
-                "application/vnd.openxmlformats-officedocument.presentationml.slideshow"),
-                "Test PPSX"));
+        docs.add(getTestBundleDocument(uploadDocument(), TEST_PDF_TITLE));
+        docs.add(getTestBundleDocument(uploadFile(WORD_DOCUMENT_DOC, APPLICATION_MS_WORD), TEST_WORD_DOCUMENT_TITLE));
+        docs.add(getTestBundleDocument(uploadFile(LARGE_DOCUMENT_DOCX, DOCX_MIME_TYPE), TEST_WORD_DOCUMENT_TITLE));
+        docs.add(getTestBundleDocument(uploadFile("Performance_Out.pptx", PPTX_MIME_TYPE), "Test PPTX"));
+        docs.add(getTestBundleDocument(uploadFile("TestExcelConversion.xlsx", XLSX_MIME_TYPE), "Test XLSX"));
+        docs.add(getTestBundleDocument(uploadFile("XLSsample.xls", XLS_MIME_TYPE), "Test XLS"));
+        docs.add(getTestBundleDocument(
+            uploadFile("Portable_XR_ReportTemplate.xltx", XLTX_MIME_TYPE), "Test XLTX"));
+        docs.add(getTestBundleDocument(uploadFile("file_example_PPT_250kB.ppt", PPT_MIME_TYPE), "Test PPT"));
+        docs.add(getTestBundleDocument(uploadFile("sample.ppsx", PPSX_MIME_TYPE), "Test PPSX"));
         bundle.setDocuments(docs);
 
         return bundle;
@@ -330,30 +314,23 @@ public class TestUtil {
         bundle.setBundleTitle("Bundle with Image");
         bundle.setDescription("This bundle contains an Image that has been converted by pdfbox");
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(uploadDocument("one-page.pdf"), "Document 1"));
-        docs.add(getTestBundleDocument(uploadDocument("Document1.pdf"), "Document 2"));
-        docs.add(getTestBundleDocument(uploadFile("flying-pig.jpg", "image/jpeg"), "Welcome to the flying pig"));
+        docs.add(getTestBundleDocument(uploadDocument(ONE_PAGE_PDF), DOCUMENT_1_TITLE));
+        docs.add(getTestBundleDocument(uploadDocument(DOCUMENT_1_PDF), DOCUMENT_2_TITLE));
+        docs.add(getTestBundleDocument(uploadFile(FLYING_PIG_JPEG, IMAGE_JPEG_MIME_TYPE), "Welcome to the flying pig"));
         bundle.setDocuments(docs);
 
         return bundle;
     }
 
     public BundleDTO getTestBundleWithWatermarkImage() {
-        BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle with Image");
-        bundle.setDescription("This bundle contains an Image that has been converted by pdfbox");
-        List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(uploadDocument("one-page.pdf"), "Document 1"));
-        docs.add(getTestBundleDocument(uploadDocument("Document1.pdf"), "Document 2"));
-        docs.add(getTestBundleDocument(uploadFile("flying-pig.jpg", "image/jpeg"), "Welcome to the flying pig"));
-        bundle.setDocuments(docs);
-
         DocumentImage documentImage = new DocumentImage();
-        documentImage.setDocmosisAssetId("hmcts.png");
+        documentImage.setDocmosisAssetId(HMCTS_PNG_ASSET_ID);
         documentImage.setImageRendering(ImageRendering.OPAQUE);
         documentImage.setImageRenderingLocation(ImageRenderingLocation.FIRST_PAGE);
         documentImage.setCoordinateX(50);
         documentImage.setCoordinateY(50);
+
+        BundleDTO bundle = getTestBundleWithImage();
         bundle.setDocumentImage(documentImage);
 
         return bundle;
@@ -361,21 +338,21 @@ public class TestUtil {
 
     private String uploadFile(String fileName, String mimeType) {
         return s2sAuthRequest()
-                .header("Content-Type", MediaType.MULTIPART_FORM_DATA_VALUE)
-                .multiPart("files", fileName, ClassLoader.getSystemResourceAsStream(fileName), mimeType)
-                .multiPart("classification", "PUBLIC")
-                .request("POST", getDmApiUrl() + "/documents")
-                .getBody()
-                .jsonPath()
-                .get("_embedded.documents[0]._links.self.href");
+            .header("Content-Type", MediaType.MULTIPART_FORM_DATA_VALUE)
+            .multiPart("files", fileName, ClassLoader.getSystemResourceAsStream(fileName), mimeType)
+            .multiPart("classification", PUBLIC_CLASSIFICATION)
+            .request("POST", getDmApiUrl() + "/documents")
+            .getBody()
+            .jsonPath()
+            .get("_embedded.documents[0]._links.self.href");
     }
 
     public BundleDTO getTestBundleWithDuplicateBundleDocuments() {
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle Title");
-        bundle.setDescription("This is the description of the bundle: it is great.");
+        bundle.setBundleTitle(BUNDLE_TITLE);
+        bundle.setDescription(BUNDLE_DESCRIPTION);
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        BundleDocumentDTO uploadedDocument = getTestBundleDocument(uploadDocument(), "Document 1");
+        BundleDocumentDTO uploadedDocument = getTestBundleDocument(uploadDocument(), DOCUMENT_1_TITLE);
         docs.add(uploadedDocument);
         docs.add(uploadedDocument);
         bundle.setDocuments(docs);
@@ -384,34 +361,29 @@ public class TestUtil {
 
     public BundleDTO getTestBundleWithSortedDocuments() {
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle Title");
-        bundle.setDescription("This is the description of the bundle: it is great.");
+        bundle.setBundleTitle(BUNDLE_TITLE);
+        bundle.setDescription(BUNDLE_DESCRIPTION);
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocumentWithSortIndices(uploadDocument("Document1.pdf"), "Document1.pdf", 2));
-        docs.add(getTestBundleDocumentWithSortIndices(uploadDocument("Document2.pdf"), "Document2.pdf", 1));
+        docs.add(getTestBundleDocumentWithSortIndices(uploadDocument(DOCUMENT_1_PDF), DOCUMENT_1_PDF, 2));
+        docs.add(getTestBundleDocumentWithSortIndices(uploadDocument(DOCUMENT_2_PDF), DOCUMENT_2_PDF, 1));
         bundle.setDocuments(docs);
         return bundle;
     }
 
     private BundleDocumentDTO getTestBundleDocumentWithSortIndices(String documentUrl, String title, int sortIndex) {
-        BundleDocumentDTO document = new BundleDocumentDTO();
-
-        document.setDocumentURI(documentUrl);
-        document.setDocTitle(String.format("Title (%s)", title));
-        document.setDocDescription(String.format("Description (%s)", title));
+        BundleDocumentDTO document = getTestBundleDocument(documentUrl, title);
         document.setSortIndex(sortIndex);
-
         return document;
     }
 
     public Response pollUntil(String endpoint,
-                              Function<JsonPath, Boolean> evaluator)
-            throws InterruptedException, IOException {
+                              Predicate<JsonPath> evaluator)
+        throws InterruptedException, IOException {
         return pollUntil(endpoint, evaluator, 30);
     }
 
     private Response pollUntil(String endpoint,
-                               Function<JsonPath, Boolean> evaluator,
+                               Predicate<JsonPath> evaluator,
                                int numRetries) throws InterruptedException, IOException {
 
         for (int i = 0; i < numRetries; i++) {
@@ -420,7 +392,7 @@ public class TestUtil {
             if (response.getStatusCode() == 500) {
                 throw new IOException("HTTP 500 from service");
             }
-            if (evaluator.apply(response.body().jsonPath())) {
+            if (evaluator.test(response.body().jsonPath())) {
                 return response;
             }
 
@@ -432,10 +404,7 @@ public class TestUtil {
 
     public static byte[] convertObjectToJsonBytes(Object object) throws IOException {
         ObjectMapper mapper = new ObjectMapper();
-
-        JavaTimeModule module = new JavaTimeModule();
-        mapper.registerModule(module);
-
+        mapper.registerModule(new JavaTimeModule());
         return mapper.writeValueAsBytes(object);
     }
 
@@ -444,13 +413,13 @@ public class TestUtil {
         documentTask.setBundle(bundle);
 
         Response createTaskResponse =
-                authRequest()
-                        .body(convertObjectToJsonBytes(documentTask))
-                        .post("/api/document-tasks");
+            authRequest()
+                .body(convertObjectToJsonBytes(documentTask))
+                .post("/api/document-tasks");
 
         String taskUrl = "/api/document-tasks/" + createTaskResponse.getBody().jsonPath().getString("id");
 
-        return pollUntil(taskUrl, body -> body.getString("taskState").equals("DONE"));
+        return pollUntil(taskUrl, body -> body.getString(TASK_STATE_FIELD).equals(DONE_STATE));
     }
 
     /**
@@ -466,27 +435,23 @@ public class TestUtil {
      */
     public BundleDTO getTestBundleWithFlatFolders() {
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle with folders");
-        bundle.setDescription("This is the description of the bundle: it is super-great.");
+        bundle.setBundleTitle(BUNDLE_WITH_FOLDERS_TITLE);
+        bundle.setDescription(SUPER_GREAT_BUNDLE_DESCRIPTION);
         bundle.setHasTableOfContents(true);
         bundle.setHasCoversheets(true);
         bundle.setHasFolderCoversheets(false);
 
         BundleFolderDTO folder = new BundleFolderDTO();
-        folder.setFolderName("Folder 1");
-        folder.getDocuments().add(getTestBundleDocumentWithSortIndices(uploadDocument(
-                "Document1.pdf"),
-                "Document1.pdf",
-                1));
+        folder.setFolderName(FOLDER_1_NAME);
+        folder.getDocuments().add(getTestBundleDocumentWithSortIndices(
+            uploadDocument(DOCUMENT_1_PDF), DOCUMENT_1_PDF, 1));
         folder.setSortIndex(1);
         bundle.getFolders().add(folder);
 
         BundleFolderDTO folder2 = new BundleFolderDTO();
-        folder2.setFolderName("Folder 2");
-        folder2.getDocuments().add(getTestBundleDocumentWithSortIndices(uploadDocument(
-                "Document2.pdf"),
-                "Document2.pdf",
-                1));
+        folder2.setFolderName(FOLDER_2_NAME);
+        folder2.getDocuments().add(getTestBundleDocumentWithSortIndices(
+            uploadDocument(DOCUMENT_2_PDF), DOCUMENT_2_PDF, 1));
         folder2.setSortIndex(2);
         bundle.getFolders().add(folder2);
 
@@ -505,27 +470,26 @@ public class TestUtil {
      */
     public BundleDTO getTestBundleWithFlatFoldersAndLongDocumentTitle() {
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle with folders");
-        bundle.setDescription("This is the description of the bundle: it is super-great."
-                + " It is long enough to wrap and show in more than one line");
+        bundle.setBundleTitle(BUNDLE_WITH_FOLDERS_TITLE);
+        bundle.setDescription(SUPER_GREAT_BUNDLE_DESCRIPTION
+            + " It is long enough to wrap and show in more than one line");
         bundle.setHasTableOfContents(true);
         bundle.setHasCoversheets(true);
         bundle.setHasFolderCoversheets(false);
 
         BundleFolderDTO folder = new BundleFolderDTO();
-        folder.setFolderName("Folder 1");
+        folder.setFolderName(FOLDER_1_NAME);
         String text = Stream.generate(() -> "DocName ").limit(20).collect(Collectors.joining());
         text += ".pdf";
-        folder.getDocuments().add(getTestBundleDocumentWithSortIndices(uploadDocument("Document1.pdf"), text, 1));
+        folder.getDocuments().add(getTestBundleDocumentWithSortIndices(
+            uploadDocument(DOCUMENT_1_PDF), text, 1));
         folder.setSortIndex(1);
         bundle.getFolders().add(folder);
 
         BundleFolderDTO folder2 = new BundleFolderDTO();
-        folder2.setFolderName("Folder 2");
-        folder2.getDocuments().add(getTestBundleDocumentWithSortIndices(uploadDocument(
-                "Document2.pdf"),
-                "Document2.pdf",
-                1));
+        folder2.setFolderName(FOLDER_2_NAME);
+        folder2.getDocuments().add(getTestBundleDocumentWithSortIndices(
+            uploadDocument(DOCUMENT_2_PDF), DOCUMENT_2_PDF, 1));
         folder2.setSortIndex(2);
         bundle.getFolders().add(folder2);
 
@@ -549,45 +513,37 @@ public class TestUtil {
      */
     public BundleDTO getTestBundleWithNestedFolders() {
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle with folders");
-        bundle.setDescription("This is the description of the bundle: it is super-great.");
+        bundle.setBundleTitle(BUNDLE_WITH_FOLDERS_TITLE);
+        bundle.setDescription(SUPER_GREAT_BUNDLE_DESCRIPTION);
         bundle.setHasTableOfContents(true);
         bundle.setHasCoversheets(true);
         bundle.setHasFolderCoversheets(false);
 
         BundleFolderDTO folder = new BundleFolderDTO();
-        folder.setFolderName("Folder 1");
-        folder.getDocuments().add(getTestBundleDocumentWithSortIndices(uploadDocument(
-                "Document1.pdf"),
-                "Document1.pdf",
-                1));
+        folder.setFolderName(FOLDER_1_NAME);
+        folder.getDocuments().add(getTestBundleDocumentWithSortIndices(
+            uploadDocument(DOCUMENT_1_PDF), DOCUMENT_1_PDF, 1));
         folder.setSortIndex(1);
         bundle.getFolders().add(folder);
 
         BundleFolderDTO folder1a = new BundleFolderDTO();
         folder1a.setFolderName("Folder 1a");
-        folder1a.getDocuments().add(getTestBundleDocumentWithSortIndices(uploadDocument(
-                "Document1.pdf"),
-                "Document1a.pdf",
-                1));
+        folder1a.getDocuments().add(getTestBundleDocumentWithSortIndices(
+            uploadDocument(DOCUMENT_1_PDF), "Document1a.pdf", 1));
         folder1a.setSortIndex(2);
         folder.getFolders().add(folder1a);
 
         BundleFolderDTO folder1b = new BundleFolderDTO();
         folder1b.setFolderName("Folder 1b");
-        folder1b.getDocuments().add(getTestBundleDocumentWithSortIndices(uploadDocument(
-                "Document1.pdf"),
-                "Document1b.pdf",
-                1));
+        folder1b.getDocuments().add(
+            getTestBundleDocumentWithSortIndices(uploadDocument(DOCUMENT_1_PDF), "Document1b.pdf", 1));
         folder1b.setSortIndex(3);
         folder.getFolders().add(folder1b);
 
         BundleFolderDTO folder2 = new BundleFolderDTO();
-        folder2.setFolderName("Folder 2");
-        folder2.getDocuments().add(getTestBundleDocumentWithSortIndices(uploadDocument(
-                "Document2.pdf"),
-                "Document2.pdf",
-                1));
+        folder2.setFolderName(FOLDER_2_NAME);
+        folder2.getDocuments().add(
+            getTestBundleDocumentWithSortIndices(uploadDocument(DOCUMENT_2_PDF), DOCUMENT_2_PDF, 1));
         folder2.setSortIndex(2);
         bundle.getFolders().add(folder2);
 
@@ -595,21 +551,15 @@ public class TestUtil {
     }
 
     public static int getNumPages(File file) throws IOException {
-        final PDDocument doc = Loader.loadPDF(file);
-        final int numPages = doc.getNumberOfPages();
-
-        doc.close();
-
-        return numPages;
+        try (PDDocument doc = Loader.loadPDF(file)) {
+            return doc.getNumberOfPages();
+        }
     }
 
     public static PDDocumentOutline getDocumentOutline(File file) throws IOException {
-        final PDDocument doc = Loader.loadPDF(file);
-        final PDDocumentOutline outline = doc.getDocumentCatalog().getDocumentOutline();
-
-        doc.close();
-
-        return outline;
+        try (PDDocument doc = Loader.loadPDF(file)) {
+            return doc.getDocumentCatalog().getDocumentOutline();
+        }
     }
 
     public static int getOutlinePage(PDOutlineItem outlineItem) throws IOException {
@@ -636,77 +586,78 @@ public class TestUtil {
 
     public RequestSpecification emptyIdamAuthRequest() {
         return s2sAuthRequest()
-                .header("Authorization", null);
+            .header(AUTH_HEADER, (String) null);
     }
 
     public RequestSpecification emptyIdamAuthAndEmptyS2SAuth() {
         return SerenityRest
-                .given()
-                .baseUri(testUrl)
-                .contentType(APPLICATION_JSON_VALUE)
-                .header("ServiceAuthorization", null)
-                .header("Authorization", null);
+            .given()
+            .baseUri(testUrl)
+            .contentType(APPLICATION_JSON_VALUE)
+            .header(SERVICE_AUTH_HEADER, (String) null)
+            .header(AUTH_HEADER, (String) null);
     }
 
     public RequestSpecification validAuthRequestWithEmptyS2SAuth() {
-        return emptyS2sAuthRequest().header("Authorization", idamAuth);
+        return emptyS2sAuthRequest().header(AUTH_HEADER, idamAuth);
     }
 
     public RequestSpecification validS2SAuthWithEmptyIdamAuth() {
-        return s2sAuthRequest().header("Authorization", null);
+        return s2sAuthRequest().header(AUTH_HEADER, (String) null);
     }
 
     private RequestSpecification emptyS2sAuthRequest() {
         return SerenityRest
-                .given()
-                .baseUri(testUrl)
-                .contentType(APPLICATION_JSON_VALUE)
-                .header("ServiceAuthorization", null);
+            .given()
+            .baseUri(testUrl)
+            .contentType(APPLICATION_JSON_VALUE)
+            .header(SERVICE_AUTH_HEADER, null);
     }
 
     public RequestSpecification invalidIdamAuthrequest() {
-        return s2sAuthRequest().header("Authorization", "invalidIDAMAuthRequest");
+        return s2sAuthRequest().header(AUTH_HEADER, "invalidIDAMAuthRequest");
     }
 
     public RequestSpecification invalidS2SAuth() {
-        return invalidS2sAuthRequest().header("Authorization", idamAuth);
+        return invalidS2sAuthRequest().header(AUTH_HEADER, idamAuth);
     }
 
     private RequestSpecification invalidS2sAuthRequest() {
         return SerenityRest
-                .given()
-                .baseUri(testUrl)
-                .contentType(APPLICATION_JSON_VALUE)
-                .header("ServiceAuthorization", "invalidS2SAuthorization");
+            .given()
+            .baseUri(testUrl)
+            .contentType(APPLICATION_JSON_VALUE)
+            .header(SERVICE_AUTH_HEADER, "invalidS2SAuthorization");
     }
 
-    ////// CDAM //////////
+    // CDAM
 
     public String getServiceAuth() {
         return cdamS2sHelper.getS2sToken();
     }
 
-    public CaseDetails createCase(String documents) throws Exception {
-        return ccdDataHelper.createCase(stitchingTestUser, "PUBLICLAW", getEnvCcdCaseTypeId(), "createCase",
-            objectMapper.readTree(String.format(createCaseTemplate, documents)));
+    public CaseDetails createCase(String documents) throws JsonProcessingException {
+        return ccdDataHelper.createCase(
+            STITCHING_TEST_USER_EMAIL, JURISDICTION, getEnvCcdCaseTypeId(), "createCase",
+            objectMapper.readTree(String.format(CREATE_CASE_TEMPLATE, documents)));
     }
 
     public String getEnvCcdCaseTypeId() {
         return "CCD_BUNDLE_MVP_TYPE_ASYNC";
     }
 
-    public List<String> uploadCdamDocuments(List<Pair<String, String>> fileDetails) throws Exception {
+    public List<String> uploadCdamDocuments(List<Pair<String, String>> fileDetails) throws JsonProcessingException {
 
         List<MultipartFile> multipartFiles = fileDetails.stream()
             .map(unchecked(pair -> createMultipartFile(pair.getFirst(), pair.getSecond())))
-            .collect(Collectors.toList());
+            .toList();
 
         DocumentUploadRequest uploadRequest = new DocumentUploadRequest(
-                Classification.PUBLIC.toString(),
-                getEnvCcdCaseTypeId(),
-            "PUBLICLAW", multipartFiles);
+            Classification.PUBLIC.toString(),
+            getEnvCcdCaseTypeId(),
+            JURISDICTION, multipartFiles);
 
-        UploadResponse uploadResponse =  cdamHelper.uploadDocuments("stitchingTestUser@stitchingTest.com",
+        UploadResponse uploadResponse =  cdamHelper.uploadDocuments(STITCHING_TEST_USER_EMAIL,
             uploadRequest);
 
         return createCaseAndUploadDocuments(uploadResponse);
@@ -721,17 +672,17 @@ public class TestUtil {
     Uploads Documents through CDAM and attachs the response DocUrl & Hash against the case. And creates/submits the
     case.
      */
-    public List<String> createCaseAndUploadDocuments(UploadResponse uploadResponse) throws Exception {
+    public List<String> createCaseAndUploadDocuments(UploadResponse uploadResponse) throws JsonProcessingException {
         List<CcdValue<CcdBundleDocumentDTO>> bundleDocuments = uploadResponse.getDocuments().stream()
             .map(this::createBundleDocument)
-            .collect(Collectors.toList());
+            .toList();
         String documentsString = objectMapper.writeValueAsString(bundleDocuments);
         createCase(documentsString);
 
 
         return uploadResponse.getDocuments().stream()
             .map(document -> document.links.self.href)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public CcdValue<CcdBundleDocumentDTO> createBundleDocument(Document document) {
@@ -748,40 +699,34 @@ public class TestUtil {
         return new CcdValue<>(ccdBundleDocumentDTO);
     }
 
-    public BundleDTO getCdamTestBundle() throws Exception {
+    public BundleDTO getCdamTestBundle() throws JsonProcessingException {
 
         List<Pair<String, String>> fileDetails = new ArrayList<>();
-        fileDetails.add(Pair.of("hundred-page.pdf", "application/pdf"));
-        fileDetails.add(Pair.of("hundred-page.pdf", "application/pdf"));
+        fileDetails.add(Pair.of(HUNDRED_PAGE_PDF, APPLICATION_PDF));
+        fileDetails.add(Pair.of(HUNDRED_PAGE_PDF, APPLICATION_PDF));
 
         List<String> docUrls = uploadCdamDocuments(fileDetails);
 
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle Title");
-        bundle.setDescription("This is the description of the bundle: it is great.");
+        bundle.setBundleTitle(BUNDLE_TITLE);
+        bundle.setDescription(BUNDLE_DESCRIPTION);
         List<BundleDocumentDTO> docs = new ArrayList<>();
 
-        docs.add(getTestBundleDocument(docUrls.get(0), "Document 1"));
-        docs.add(getTestBundleDocument(docUrls.get(1), "Document 2"));
+        docs.add(getTestBundleDocument(docUrls.get(0), DOCUMENT_1_TITLE));
+        docs.add(getTestBundleDocument(docUrls.get(1), DOCUMENT_2_TITLE));
         bundle.setDocuments(docs);
 
         return bundle;
     }
 
-    public BundleDTO getCdamTestBundleWithWordDoc() throws Exception {
+    public BundleDTO getCdamTestBundleWithWordDoc() throws JsonProcessingException {
 
         List<Pair<String, String>> fileDetails = new ArrayList<>();
-        fileDetails.add(Pair.of("hundred-page.pdf", "application/pdf"));
-        fileDetails.add(Pair.of("wordDocument.doc", "application/msword"));
-        fileDetails.add(Pair.of(
-                "wordDocument2.docx",
-                "application/vnd.openxmlformats-officedocument.wordprocessingml.document"));
-        fileDetails.add(Pair.of(
-                "largeDocument.docx",
-                "application/vnd.openxmlformats-officedocument.wordprocessingml.document"));
-        fileDetails.add(Pair.of(
-                "wordDocumentInternallyZip.docx",
-                "application/vnd.openxmlformats-officedocument.wordprocessingml.document"));
+        fileDetails.add(Pair.of(HUNDRED_PAGE_PDF, APPLICATION_PDF));
+        fileDetails.add(Pair.of(WORD_DOCUMENT_DOC, APPLICATION_MS_WORD));
+        fileDetails.add(Pair.of(WORD_DOCUMENT_2_DOCX, DOCX_MIME_TYPE));
+        fileDetails.add(Pair.of(LARGE_DOCUMENT_DOCX, DOCX_MIME_TYPE));
+        fileDetails.add(Pair.of(WORD_DOCUMENT_ZIP_DOCX, DOCX_MIME_TYPE));
 
         List<String> docUrls = uploadCdamDocuments(fileDetails);
 
@@ -789,20 +734,20 @@ public class TestUtil {
         bundle.setBundleTitle("Bundle of Word Documents");
         bundle.setDescription("This bundle contains Word documents that have been converted by Docmosis.");
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(docUrls.get(0), "Test PDF"));
-        docs.add(getTestBundleDocument(docUrls.get(1), "Test Word Document"));
+        docs.add(getTestBundleDocument(docUrls.get(0), TEST_PDF_TITLE));
+        docs.add(getTestBundleDocument(docUrls.get(1), TEST_WORD_DOCUMENT_TITLE));
         docs.add(getTestBundleDocument(docUrls.get(2),  "Test DocX"));
-        docs.add(getTestBundleDocument(docUrls.get(3),"Test Word Document"));
+        docs.add(getTestBundleDocument(docUrls.get(3), TEST_WORD_DOCUMENT_TITLE));
         docs.add(getTestBundleDocument(docUrls.get(4),"Test Word DocX/Zip"));
         bundle.setDocuments(docs);
 
         return bundle;
     }
 
-    public BundleDTO getCdamTestBundleWithTextFile() throws Exception {
+    public BundleDTO getCdamTestBundleWithTextFile() throws JsonProcessingException {
         List<Pair<String, String>> fileDetails = new ArrayList<>();
-        fileDetails.add(Pair.of("hundred-page.pdf", "application/pdf"));
-        fileDetails.add(Pair.of("sample_text_file.txt", "text/plain"));
+        fileDetails.add(Pair.of(HUNDRED_PAGE_PDF, APPLICATION_PDF));
+        fileDetails.add(Pair.of("sample_text_file.txt", TEXT_PLAIN_MIME_TYPE));
 
         List<String> docUrls = uploadCdamDocuments(fileDetails);
 
@@ -810,17 +755,17 @@ public class TestUtil {
         bundle.setBundleTitle("Bundle of Text File");
         bundle.setDescription("This bundle contains Text File that has been converted by Docmosis.");
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(docUrls.get(0), "Test PDF"));
+        docs.add(getTestBundleDocument(docUrls.get(0), TEST_PDF_TITLE));
         docs.add(getTestBundleDocument(docUrls.get(1), "Test Text File"));
         bundle.setDocuments(docs);
 
         return bundle;
     }
 
-    public BundleDTO getCdamTestBundleWithRichTextFile() throws Exception {
+    public BundleDTO getCdamTestBundleWithRichTextFile() throws JsonProcessingException {
         List<Pair<String, String>> fileDetails = new ArrayList<>();
-        fileDetails.add(Pair.of("hundred-page.pdf", "application/pdf"));
-        fileDetails.add(Pair.of("rtf.rtf", "application/rtf"));
+        fileDetails.add(Pair.of(HUNDRED_PAGE_PDF, APPLICATION_PDF));
+        fileDetails.add(Pair.of("rtf.rtf", RTF_MIME_TYPE));
 
         List<String> docUrls = uploadCdamDocuments(fileDetails);
 
@@ -828,34 +773,24 @@ public class TestUtil {
         bundle.setBundleTitle("Bundle of Rich Text File");
         bundle.setDescription("This bundle contains Rich Text File that has been converted by Docmosis.");
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(docUrls.get(0), "Test PDF"));
+        docs.add(getTestBundleDocument(docUrls.get(0), TEST_PDF_TITLE));
         docs.add(getTestBundleDocument(docUrls.get(1), "Rich Text File"));
         bundle.setDocuments(docs);
 
         return bundle;
     }
 
-    public BundleDTO getCdamTestBundleWithExcelAndPptDoc() throws Exception {
+    public BundleDTO getCdamTestBundleWithExcelAndPptDoc() throws JsonProcessingException {
         List<Pair<String, String>> fileDetails = new ArrayList<>();
-        fileDetails.add(Pair.of("hundred-page.pdf", "application/pdf"));
-        fileDetails.add(Pair.of("wordDocument.doc", "application/msword"));
-        fileDetails.add(Pair.of(
-                "largeDocument.docx",
-                "application/vnd.openxmlformats-officedocument.wordprocessingml.document"));
-        fileDetails.add(Pair.of(
-                "Performance_Out.pptx",
-                "application/vnd.openxmlformats-officedocument.presentationml.presentation"));
-        fileDetails.add(Pair.of(
-                "TestExcelConversion.xlsx",
-                "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"));
-        fileDetails.add(Pair.of("XLSsample.xls", "application/vnd.ms-excel"));
-        fileDetails.add(Pair.of(
-                "Portable_XR_ReportTemplate.xltx",
-                "application/vnd.openxmlformats-officedocument.spreadsheetml.template"));
-        fileDetails.add(Pair.of("potential_and_kinetic.ppt", "application/vnd.ms-powerpoint"));
-        fileDetails.add(Pair.of(
-                "sample.ppsx",
-                "application/vnd.openxmlformats-officedocument.presentationml.slideshow"));
+        fileDetails.add(Pair.of(HUNDRED_PAGE_PDF, APPLICATION_PDF));
+        fileDetails.add(Pair.of(WORD_DOCUMENT_DOC, APPLICATION_MS_WORD));
+        fileDetails.add(Pair.of(LARGE_DOCUMENT_DOCX, DOCX_MIME_TYPE));
+        fileDetails.add(Pair.of("Performance_Out.pptx", PPTX_MIME_TYPE));
+        fileDetails.add(Pair.of("TestExcelConversion.xlsx", XLSX_MIME_TYPE));
+        fileDetails.add(Pair.of("XLSsample.xls", XLS_MIME_TYPE));
+        fileDetails.add(Pair.of("Portable_XR_ReportTemplate.xltx", XLTX_MIME_TYPE));
+        fileDetails.add(Pair.of("potential_and_kinetic.ppt", PPT_MIME_TYPE));
+        fileDetails.add(Pair.of("sample.ppsx", PPSX_MIME_TYPE));
 
         List<String> docUrls = uploadCdamDocuments(fileDetails);
 
@@ -863,9 +798,9 @@ public class TestUtil {
         bundle.setBundleTitle("Bundle of Excel and PPT Documents");
         bundle.setDescription("This bundle contains PPT and Excel documents that have been converted by Docmosis.");
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(docUrls.get(0), "Test PDF"));
-        docs.add(getTestBundleDocument(docUrls.get(1), "Test Word Document"));
-        docs.add(getTestBundleDocument(docUrls.get(2),"Test Word Document"));
+        docs.add(getTestBundleDocument(docUrls.get(0), TEST_PDF_TITLE));
+        docs.add(getTestBundleDocument(docUrls.get(1), TEST_WORD_DOCUMENT_TITLE));
+        docs.add(getTestBundleDocument(docUrls.get(2), TEST_WORD_DOCUMENT_TITLE));
         docs.add(getTestBundleDocument(docUrls.get(3),"Test PPTX"));
         docs.add(getTestBundleDocument(docUrls.get(4),"Test XLSX"));
         docs.add(getTestBundleDocument(docUrls.get(5), "Test XLS"));
@@ -877,11 +812,11 @@ public class TestUtil {
         return bundle;
     }
 
-    public BundleDTO getCdamTestBundleWithImage() throws Exception {
+    public BundleDTO getCdamTestBundleWithImage() throws JsonProcessingException {
         List<Pair<String, String>> fileDetails = new ArrayList<>();
-        fileDetails.add(Pair.of("one-page.pdf", "application/pdf"));
-        fileDetails.add(Pair.of("Document1.pdf", "application/pdf"));
-        fileDetails.add(Pair.of("flying-pig.jpg", "image/jpeg"));
+        fileDetails.add(Pair.of(ONE_PAGE_PDF, APPLICATION_PDF));
+        fileDetails.add(Pair.of(DOCUMENT_1_PDF, APPLICATION_PDF));
+        fileDetails.add(Pair.of(FLYING_PIG_JPEG, IMAGE_JPEG_MIME_TYPE));
 
         List<String> docUrls = uploadCdamDocuments(fileDetails);
 
@@ -889,18 +824,17 @@ public class TestUtil {
         bundle.setBundleTitle("Bundle with Image");
         bundle.setDescription("This bundle contains an Image that has been converted by pdfbox");
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocument(docUrls.get(0), "Document 1"));
-        docs.add(getTestBundleDocument(docUrls.get(1), "Document 2"));
+        docs.add(getTestBundleDocument(docUrls.get(0), DOCUMENT_1_TITLE));
+        docs.add(getTestBundleDocument(docUrls.get(1), DOCUMENT_2_TITLE));
         docs.add(getTestBundleDocument(docUrls.get(2), "Welcome to the flying pig"));
         bundle.setDocuments(docs);
 
         return bundle;
     }
 
-    public BundleDTO getCdamTestBundleWithWatermarkImage() throws Exception {
-
+    public BundleDTO getCdamTestBundleWithWatermarkImage() throws JsonProcessingException {
         DocumentImage documentImage = new DocumentImage();
-        documentImage.setDocmosisAssetId("hmcts.png");
+        documentImage.setDocmosisAssetId(HMCTS_PNG_ASSET_ID);
         documentImage.setImageRendering(ImageRendering.OPAQUE);
         documentImage.setImageRenderingLocation(ImageRenderingLocation.FIRST_PAGE);
         documentImage.setCoordinateX(50);
@@ -912,35 +846,35 @@ public class TestUtil {
         return bundle;
     }
 
-    public BundleDTO getCdamTestBundleWithDuplicateBundleDocuments() throws Exception {
+    public BundleDTO getCdamTestBundleWithDuplicateBundleDocuments() throws JsonProcessingException {
         List<Pair<String, String>> fileDetails = new ArrayList<>();
-        fileDetails.add(Pair.of("hundred-page.pdf", "application/pdf"));
+        fileDetails.add(Pair.of(HUNDRED_PAGE_PDF, APPLICATION_PDF));
 
         List<String> docUrls = uploadCdamDocuments(fileDetails);
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle Title");
-        bundle.setDescription("This is the description of the bundle: it is great.");
+        bundle.setBundleTitle(BUNDLE_TITLE);
+        bundle.setDescription(BUNDLE_DESCRIPTION);
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        BundleDocumentDTO uploadedDocument = getTestBundleDocument(docUrls.get(0), "Document 1");
+        BundleDocumentDTO uploadedDocument = getTestBundleDocument(docUrls.getFirst(), DOCUMENT_1_TITLE);
         docs.add(uploadedDocument);
         docs.add(uploadedDocument);
         bundle.setDocuments(docs);
         return bundle;
     }
 
-    public BundleDTO getCdamTestBundleWithSortedDocuments() throws Exception {
+    public BundleDTO getCdamTestBundleWithSortedDocuments() throws JsonProcessingException {
         List<Pair<String, String>> fileDetails = new ArrayList<>();
-        fileDetails.add(Pair.of("Document1.pdf", "application/pdf"));
-        fileDetails.add(Pair.of("Document2.pdf", "application/pdf"));
+        fileDetails.add(Pair.of(DOCUMENT_1_PDF, APPLICATION_PDF));
+        fileDetails.add(Pair.of(DOCUMENT_2_PDF, APPLICATION_PDF));
 
         List<String> docUrls = uploadCdamDocuments(fileDetails);
 
         BundleDTO bundle = new BundleDTO();
-        bundle.setBundleTitle("Bundle Title");
-        bundle.setDescription("This is the description of the bundle: it is great.");
+        bundle.setBundleTitle(BUNDLE_TITLE);
+        bundle.setDescription(BUNDLE_DESCRIPTION);
         List<BundleDocumentDTO> docs = new ArrayList<>();
-        docs.add(getTestBundleDocumentWithSortIndices(docUrls.get(0), "Document1.pdf", 2));
-        docs.add(getTestBundleDocumentWithSortIndices(docUrls.get(1), "Document2.pdf", 1));
+        docs.add(getTestBundleDocumentWithSortIndices(docUrls.get(0), DOCUMENT_1_PDF, 2));
+        docs.add(getTestBundleDocumentWithSortIndices(docUrls.get(1), DOCUMENT_2_PDF, 1));
         bundle.setDocuments(docs);
         return bundle;
     }
